<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timerTitle"
        android:text="@string/timer_title"
        android:textSize="25sp"
        android:textColor="#000000"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterTimer"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:autofillHints="Enter a number (Seconds)"
        android:hint="@string/timer_hint"
        app:layout_constraintTop_toBottomOf="@id/timerTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createTimer"
        android:text="@string/timer_create"
        android:layout_marginTop="15dp"
        android:layout_marginStart="85dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTimer"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteTimer"
        android:text="@string/cancel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        app:layout_constraintLeft_toRightOf="@id/createTimer"
        app:layout_constraintTop_toBottomOf="@+id/enterTimer"
        />

   <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stopTimer"
        android:text="@string/stop_audio_timer"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteTimer" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>
